# tasky-api

./: Cargo.toml  README.md
.github/: release.yml
.github/workflows/: audit.yml  bloat.yml  coverage.yml  release.yml
src/: error.rs  main.rs  notifications.rs  test.rs
src/aws/: client.rs  credentials.rs  dto.rs  manager.rs  mod.rs
src/aws/cloudwatch_logs/: dto.rs  mod.rs
src/aws/ecs/: dto.rs  mod.rs
src/aws/s3/: mod.rs
