[package]
name = "tasky-api"
version = "0.1.0"
authors = ["Donovan Dall <donovandall@icloud.com>"]
edition = "2018"

[profile.release]
lto = "fat"
codegen-units = 1
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
pretty_env_logger = "0.4.0"
serde_json = "1.0.55"
serde = {version = "1.0.114", features = ["derive"] }
serde-xml-rs = "0.4.0"
anyhow = "1.0.32"
dirs = "2.0"
futures = "0.3"
hyper-proxy = "0.7"
hyper = { version = "0.13.6", features = ["runtime"] }
hyper-tls = "0.4"
bytes = "0.5.6"
rusoto_core = "0.45.0"
rusoto_s3 = "0.45.0"
rusoto_credential = "0.45.0"
rusoto_ecs = "0.45.0"
rusoto_sts = "0.45.0"
rusoto_logs = "0.45.0"
rayon = "1.4.0"
regex = "1.3"
chrono = {version = "0.4", features = ["serde"] }
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
reqwest = "0.10.8"
resiter = "0.4.0"
im = "15.0.0"

[dev-dependencies]
pretty_assertions = "0.6.1"